# invora-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 202607050001_foundation_baseline.py  202607050002_auth_identity.py  202607050003_user_profile_fields.py  202607050004_product_catalog.py  202607050005_inventory.py  202607050006_sales_upload.py  202607050007_sales_transactions.py  202607050008_forecast_runs.py  202607050009_ml_forecasting.py  202607050010_reorder_recommendations.py  202607050011_background_jobs.py  202607050012_system_settings.py
app/: __init__.py  main.py  server.py
app/api/v1/: health.py  router.py
app/core/: __init__.py  config.py  error_handlers.py  exceptions.py  logging.py  security.py
app/db/: __init__.py  session.py
app/modules/: __init__.py
app/modules/auth/: __init__.py
app/modules/dashboard/: __init__.py
app/modules/forecasting/: __init__.py
app/modules/jobs/: __init__.py  tasks.py  worker.py
app/modules/products/: __init__.py
app/modules/recommendations/: __init__.py
app/modules/reports/: __init__.py
app/modules/settings/: __init__.py
app/modules/users/: __init__.py
app/shared/: __init__.py  enums.py  pagination.py  responses.py
app/tests/: conftest.py
app/tests/integration/: test_auth_api.py  (+15 more)
docs/: README.md  api-smoke-test.md  architecture.md  commands.md  configuration.md  database.md  deployment.md  openapi.md  production-readiness.md  progress.md  project-runner.md  security-audit.md  swagger.md  testing.md
(+166 files in other folders)
